[tool.poetry]
name = "browserhistory"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.6.2"
pandas = "^1.2.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
